<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.lingoknight.PracticeFragment">

    <data>

        <variable
            name="GameViewModel"
            type="app.lingoknight.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/my_background">


        <ImageView
            android:id="@+id/cardBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_image"
            android:elevation="-5dp"
            android:src="@drawable/big_text_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />


        <ImageView
            android:id="@+id/correctImage"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/word_picture"
            android:src="@drawable/yeah_comic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/correctAnswerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/correct_answer_title"
            android:textSize="36sp"
            app:layout_constraintTop_toBottomOf="@+id/correctImage"
            tools:layout_editor_absoluteX="-26dp" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/correct_answer_title"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@+id/correctAnswerTitle"
            tools:layout_editor_absoluteX="-17dp" />

        <Button
            android:id="@+id/nextBtn"
            style="@style/home_page_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/next"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardBackground" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>